# smt-modern

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: API.md  USAGE_GUIDE.md
examples/: basic_usage.py
smt/: __init__.py
smt/core/: __init__.py  tokenizer.py  vocabulary.py
smt/patterns/: __init__.py  detector.py
smt/utils/: __init__.py  midi_utils.py
tests/: __init__.py  decoded_test.mid  test_integration.py  test_melody.mid  test_midi_utils.py  test_patterns.py  test_tokenizer.py  test_vocabulary.py
